--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ greenlet==1.1.2
 h11==0.13.0
 idna==3.3
 MarkupSafe==2.0.1
+psycopg2-binary==2.9.3
 pydantic==1.9.0
 python-dotenv==0.19.2
 PyYAML==5.4.1
