--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ fastapi==0.73.0
 greenlet==1.1.2
 h11==0.13.0
 idna==3.3
+Jinja2==3.0.3
 MarkupSafe==2.0.1
 psycopg2-binary==2.9.3
 pydantic==1.9.0
 python-dotenv==0.19.2
+python-multipart==0.0.5
 PyYAML==5.4.1
 six==1.16.0
 sniffio==1.2.0
